# uia-x

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  MACOS_QUICKEN_IMPLEMENTATION.md  README.md  conftest.py  debug_split_button.py  find_windows.py  inspect_split_dialog.py  inspect_split_dlg.py  pyproject.toml  quicken_skill.md  read_split_rows.py  requirements.txt  server_err.txt  server_out.txt  start_server_admin.ps1  test_output.txt  test_split_direct.py  test_split_reading.py  test_split_rows.py  test_splits.py
.github/workflows/: linux-ci.yml
docker/: Dockerfile  docker-compose.ci.yml
examples/quicken/: AGENT_SKILL_GUIDE.md  README.md  example_calls.json  quicken_attach.py
mock_uia/: __init__.py  tree.py
platform_analysis/: MACOS_IMPLEMENTATION_PLAN.md  README.md  part1_windows_apis.md  part2_ocr_screen_capture.md  part3_quicken_semantics.md  part4_interface_layer.md  part5_no_translate.md
schemas/: mouse_click.json  process_list.json  select_window.json  send_keys.json  target.json  type_text.json  uia_find_all.json  uia_get_text.json  uia_inspect.json  uia_invoke.json  uia_legacy_invoke.json  uia_mouse_click.json  uia_read_display.json  uia_send_keys.json  uia_set_value.json
scripts/: debug_sidebar.py  sidebar_diag.txt  sidebar_diag_v10.txt  sidebar_diag_v11.txt  sidebar_diag_v9.txt  test_mcp_sidebar.py  test_sidebar_live.py
server/: __init__.py  auth.py  mock_bridge.py  process_manager.py  real_bridge.py  server.py  uia_bridge.py  win_bridge.py
skills/: __init__.py
skills/quicken/: __init__.py  bridge_ext.py  macos_impl.py  ocr_region.swift  tools.py  windows_impl.py
tests/: live_macos_demo.py  mcp_live_test.py  run_headless.sh  test_auth.py  test_input.py  test_linux_backend.py  test_linux_integration.py  test_linux_integration_docker.py  test_macos_backend.py  test_macos_integration.py  test_msaa.py  test_process.py  test_tools.py
uiax/: __init__.py  server.py
uiax/backends/: __init__.py
uiax/backends/linux/: __init__.py  atspi_backend.py  bridge.py  util.py
uiax/backends/macos/: __init__.py  axapi_backend.py  bridge.py  util.py
